[gd_scene load_steps=3 format=3 uid="uid://ctklsjrfucjc3"]

[ext_resource type="Script" path="res://addons/PixelMapGenerator/ProcessAsset.gd" id="1_3uxih"]
[ext_resource type="Texture2D" uid="uid://yxejjhw0ydyp" path="res://Assets/Untitled.png" id="2_4q142"]

[node name="ProcessAsset" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_3uxih")

[node name="SelectReferenceFile" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 1
size = Vector2i(500, 750)
min_size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129458, 0.148989, 0.180255, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 61.0
grow_horizontal = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
text = " Reference File: "
text_overrun_behavior = 3

[node name="TextEdit" type="TextEdit" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
autowrap_mode = 1

[node name="File Select Button" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
icon = ExtResource("2_4q142")
icon_alignment = 1

[node name="Process Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Process"
alignment = 0

[connection signal="file_selected" from="SelectReferenceFile" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer/File Select Button" to="." method="_on_file_select_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Process Button" to="." method="process_selected_file"]
